@@ -80,7 +80,7 @@
           <td height="1" bgcolor="#FFFFFF"><img src="{$root}img/fake.gif" width="1" height="1"></td>
         </tr>
 		 <tr>
-          <td class="menu1" bgcolor="#E7EBF7">&nbsp;&nbsp;&raquo; <a href="a" class=menu1>{#login#}</a></td>
+          <td class="menu1" bgcolor="#E7EBF7">&nbsp;&nbsp;&raquo; <a href="{$server_root}" class=menu1>{#login#}</a></td>
         </tr>
         <tr>
           <td height="1" bgcolor="#FFFFFF"><img src="{$root}img/fake.gif" width="1" height="1"></td>
@@ -95,7 +95,12 @@
 <table width="100%" border="0" cellspacing="1" cellpadding="3">
 
               <tr> 
-                <td valign="top"> <div align="center">{include file=$action}</div></td>
+                <td valign="top"> <div align="center">{include file=$action}<br>
+				{if $show_help}
+				  {include file=helpbox.htm} 
+  				{/if}
+
+				</div></td>
                 <td width="1" valign="top">&nbsp; </td>
               </tr>
             </table>
